# sdk-nrf

./: west.yml
applications/nrf_desktop/: sample.yaml
applications/thread_border_router/: CMakeLists.txt  Kconfig  Kconfig.defaults  prj.conf
applications/thread_border_router/boards/: nrf54h20dk_nrf54h20_cpuapp_soc1.overlay
applications/thread_border_router/configuration/: nrf7002eb.overlay
applications/thread_border_router/src/: border_agent.c  border_agent.h  main.c  shell.c
applications/thread_border_router/tests/mdns/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
applications/thread_border_router/tests/mdns/src/: main.c
cmake/: partition_manager.cmake
doc/nrf/: applications.rst  links.txt  nrf54h.rst
doc/nrf/includes/: sample_board_rows.txt
doc/nrf/releases/: release-notes-changelog_lcs.rst
include/dfu/: suit_dfu_fetch_source.h
modules/trusted-firmware-m/: Kconfig.tfm.defconfig
samples/bluetooth/peripheral_rscs/: sample.yaml
samples/egu/: sample.yaml
scripts/: quarantine_integration_next.yaml  quarantine_next.yaml  requirements-fixed.txt  tools-versions-darwin.yml  tools-versions-linux.yml  tools-versions-win10.yml
snippets/tdd-stmsink-etr/: snippet.yml  tdd-stmsink-etr.overlay
snippets/tdd-stmsink-tpiu/: snippet.yml  tdd-stmsink-tpiu.overlay
subsys/: CMakeLists.txt
subsys/esb/: Kconfig  esb.c  esb_dppi.c
subsys/nrf_security/: CMakeLists.txt  Kconfig
subsys/suit/: CMakeLists.txt  Kconfig
suit_provisioning/soc/: Kconfig.nrf54h20
tests/subsys/suit/common/sdfw_builtin_keys_test/: CMakeLists.txt  sdfw_builtin_keys_test.c
(+369 files in other folders)
